# pdf2ppt

./: LICENSE  README.md  pdf2ppt.py  pyproject.toml
